@@ -1,7 +1,7 @@
 
 # BsMax 2.80 ~ 2.92
 
-BsMax is package of many different tools and UI simulator for [Blender 3D](https://www.blender.org/).
+BsMax is package of many different tools and UI simulator (much as possible) for [Blender 3D](https://www.blender.org/).
 
 * Animatable Primitive Objects.
 * Many Different tools.
@@ -9,7 +9,7 @@ BsMax is package of many different tools and UI simulator for [Blender 3D](https
 * BsMax do not makes dependency in you project. you can continue your project without BsMax any time.
 * Note: the only future the will not works without BsMax is "Animated Primitives" (Not the static ones).
 
-The goal of UI simulator is make people come form other software (like me) feel comfortable or who has to switch frequently between Blender or other software do not be confused.
+The goal of UI simulator is people that came from other software (like me) feel comfortable or who has to switch frequently between Blender or other software do not be confused.
 
 Your Reports and Ideas will help me alot and don't forget the sharing. let more people who needs this stuff know this is exist.
 
@@ -24,8 +24,10 @@ Your Reports and Ideas will help me alot and don't forget the sharing. let more 
 
 # latest Updates
 
-* Weight paint to vertex paint convertor added (for now search for "Weight to Vertex Color").
-* Create Curve from hair guide tool added (for now search for "Hair Guides To Curve")
+* Max like selection key map added for particle edit mode(Max mode only).
+* Hair guide from curve step_key counts issue fixed.
+* Node editor 3DsMax like selection short keys (Max mode only).
+* Node editor 'H' and 'Ctrl + H' actions swapped for 3DsMax mode.
 * [Update History...](https://github.com/NevilArt/BsMax_2_80/blob/master/HISTORY.TXT)
 
 # License
